Project

General

Profile

Actions

Bug #49788

closed

pool application metadata not propagated to the cache tier

Added by Sage Weil about 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if you have a base pool with application metadata, that application is not propagated to the cache tier.

This is a problem if the cap to access that pool is based on the metadata. For instance,

[mds.ar.cpach.ohyiro]
        key = AQBJ40xg4WRhARAAaIWMkGOTNiwB/TT0wumwXQ==
        caps mds = "allow" 
        caps mon = "profile mds" 
        caps osd = "allow rw tag cephfs *=*" 

you cannot manually set the application metadata on the cache tier:

Error EINVAL: application must be enabled on base tier

Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #49795: octopus: pool application metadata not propagated to the cache tierResolvedsinguliere _Actions
Copied to RADOS - Backport #49796: pacific: pool application metadata not propagated to the cache tierResolvedSage WeilActions
Actions #1

Updated by Sage Weil about 3 years ago

  • Backport set to pacific,octopus
Actions #2

Updated by Sage Weil about 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 40100
Actions #3

Updated by Kefu Chai about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49795: octopus: pool application metadata not propagated to the cache tier added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49796: pacific: pool application metadata not propagated to the cache tier added
Actions #6

Updated by Loïc Dachary about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF